--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,19 @@
     <string name="app_name">Magic Shop</string>
     <string name="magic_shop">Magic Shop</string>
 
+    <string name="magic_shop_1">
+            @Magic_Shop
+</string>
+
+    <string name="some_id"> 로그인
+</string>
+
+    <string name="some_id1">
+로그인
+</string>
+
+    <string name="register">
+회원 가입
+</string>
+
 </resources>
