--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="category_bag_11">브리프 케이스</string>
     <string name="category_bag_12">기타 가방</string>
 
-
+    <string name="category_winter_update"># 2023 겨울 신상 업데이트</string>
 
 
 
